[workspace]

members = [
    "den-core",
    "den-stdlib-console",
    "den-stdlib-core",
    "den-stdlib-fs",
    "den-stdlib-io",
    "den-stdlib-networking",
    "den-stdlib-regex",
    "den-stdlib-text",
    "den-stdlib-timer",
    "den-stdlib-wasm",
    "den-transpiler-swc",
    "den-utils",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/stevefan1999-personal/den"
readme = "README.md"
authors = [
    "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>",
]
license = "MIT"
keywords = [
    "javascript",
    "quickjs",
    "tokio",
    "typescript",
    "swc",
    "reqwest",
    "wasmer",
]

[workspace.dependencies]
delegate-attr = "0.3.0"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = [
    "deref_mut",
    "deref",
    "from",
    "into",
    "display",
    "from",
    "error",
    "debug",
] }
either = "1.13.0"
futures = "0.3.30"
phf = "0.11.2"
rquickjs = { version = "0.6.2", features = [
    "full-async",
    "rust-alloc",
    "parallel",
] }
swc_core = "0.104.2"
tokio = "1.40.0"
tokio-util = "0.7.12"
thiserror = "1.0.63"

[package]
name = "den"
description = "One word less than Deno!"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["unicode", "derive", "env"] }
color-eyre = { version = "0.6.3", default-features = false }
console-subscriber = { version = "0.4.0", optional = true }
den-core = { version = "*", path = "den-core" }
den-utils = { version = "*", path = "den-utils" }
futures.workspace = true
rquickjs.workspace = true
rustyline = { version = "14.0.0", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
vc-ltl = "5.1.1"

[features]
default = ["stdlib", "typescript", "react"]
typescript = ["den-core/typescript"]
react = ["den-core/react"]
transpile = ["den-core/transpile"]

tracing = ["color-eyre/track-caller", "color-eyre/capture-spantrace"]
tokio-console = ["console-subscriber"]

stdlib = ["den-core/stdlib"]
stdlib-console = ["den-core/stdlib-console"]
stdlib-core = ["den-core/stdlib-core"]
stdlib-fs = ["den-core/stdlib-fs"]
stdlib-networking = ["den-core/stdlib-networking"]
stdlib-text = ["den-core/stdlib-text"]
stdlib-timer = ["den-core/stdlib-timer"]

wasm = ["den-core/wasm"]
wasm-wasmtime = ["den-core/wasm-wasmtime"]
wasm-wasmi = ["den-core/wasm-wasmi"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
incremental = true
lto = "thin"
strip = "debuginfo"

[profile.min-size-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[profile.min-size-release-strip]
inherits = "min-size-release"
strip = "symbols"

[profile.test]
default = ["den-core/stdlib", "den-core/typescript", "den-core/react"]

[build-dependencies]
cargo-emit = "0.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
