[workspace]

members = [
    "den-core",
    "den-stdlib-console",
    "den-stdlib-core", 
    "den-stdlib-crypto",
    "den-stdlib-fs",
    "den-stdlib-io",
    "den-stdlib-networking",
    "den-stdlib-regex", 
    "den-stdlib-sqlite",
    "den-stdlib-text",
    "den-stdlib-timer",
    "den-stdlib-wasm", 
    "den-stdlib-whatwg-fetch",
    "den-transpiler-swc",
    "den-utils",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/stevefan1999-personal/den"
readme = "README.md"
authors = [
    "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>",
]
license = "MIT"
keywords = [
    "javascript",
    "quickjs",
    "tokio",
    "typescript",
    "swc",
    "reqwest",
    "wasmer",
]

[workspace.dependencies]
delegate-attr = "0.3.0"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = [
    "deref_mut",
    "deref",
    "from",
    "into",
    "display",
    "from",
    "error",
    "debug",
] }
either = "1.13.0"
futures = "0.3.30"
indexmap = "2.6.0"
phf = "0.11.2"
rquickjs = { version = "0.6.2", features = [
    "full-async",
    "rust-alloc",
    "parallel",
    "indexmap",
    "either",
    "dump-leaks"
] }
tokio = "1.40.0"
tokio-util = "0.7.12"
tracing = "0.1.40"
thiserror = "1.0.64"
typed-builder = "0.20.0"
reqwest = "0.12.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.210"
serde_json = "1.0.128"

[package]
name = "den"
description = "One word less than Deno!"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.19", features = ["unicode", "derive", "env"] }
color-eyre = { version = "0.6.3", default-features = false }
console-subscriber = { version = "0.4.0", optional = true }
den-core = { version = "*", path = "den-core", default-features = false }
den-utils = { version = "*", path = "den-utils", default-features = false }
futures.workspace = true
rquickjs.workspace = true
rustyline = { version = "14.0.0", features = ["derive", "with-sqlite-history"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
vc-ltl = "5.1.1"

[features]
default = ["stdlib", "typescript", "react", "wasm-wasmtime"]
typescript = ["den-core/typescript"]
react = ["den-core/react"]
transpile = ["den-core/transpile"]

tracing = ["color-eyre/track-caller", "color-eyre/capture-spantrace"]
tokio-console = ["console-subscriber"]

stdlib = ["den-core/stdlib"]
stdlib-console = ["den-core/stdlib-console"]
stdlib-core = ["den-core/stdlib-core"]
stdlib-crypto = ["den-core/stdlib-crypto"]
stdlib-fs = ["den-core/stdlib-fs"]
stdlib-networking = ["den-core/stdlib-networking"]
stdlib-sqlite = ["den-core/stdlib-sqlite"]
stdlib-text = ["den-core/stdlib-text"]
stdlib-timer = ["den-core/stdlib-timer"]
stdlib-whatwg-fetch = ["den-core/stdlib-whatwg-fetch"]

wasm = ["den-core/wasm"]
wasm-wasmtime = ["den-core/wasm-wasmtime"]
wasm-wasmi = ["den-core/wasm-wasmi"]


[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
incremental = true
lto = "thin"
strip = "debuginfo"

[profile.min-size-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[profile.min-size-release-strip]
inherits = "min-size-release"
strip = "symbols"

[build-dependencies]
cargo-emit = "0.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[patch.crates-io]
#rquickjs = { git = "https://github.com/DelSkayn/rquickjs" }
rquickjs = { path = "F:\\Git\\github.com\\DelSkayn\\rquickjs" }
