[package]
name = "den-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cfg-if = "1.0.0"
derivative.workspace = true
derive_more.workspace = true
fmmap = { version = "0.3.3", features = ["tokio-async"] }
matchit = "0.8.4"
mime = "0.3.17"
relative-path = "1.9.3"
reqwest = { workspace = true, features = [
    "stream",
    "deflate",
    "gzip",
    "brotli",
    "native-tls",
] }
rquickjs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url = "2.5.2"
typed-builder = "0.20.0"

# Den specific stuff
den-stdlib-console = { version = "*", path = "../den-stdlib-console", optional = true }
den-stdlib-core = { version = "*", path = "../den-stdlib-core", optional = true }
den-stdlib-crypto = { version = "*", path = "../den-stdlib-crypto", optional = true }
den-stdlib-fs = { version = "*", path = "../den-stdlib-fs", optional = true }
den-stdlib-networking = { version = "*", path = "../den-stdlib-networking", optional = true }
den-stdlib-sqlite = { version = "*", path = "../den-stdlib-sqlite", optional = true }
den-stdlib-text = { version = "*", path = "../den-stdlib-text", optional = true }
den-stdlib-timer = { version = "*", path = "../den-stdlib-timer", optional = true }
den-stdlib-wasm = { version = "*", path = "../den-stdlib-wasm", optional = true }
den-stdlib-whatwg-fetch = { version = "*", path = "../den-stdlib-whatwg-fetch", optional = true }
den-transpiler-swc = { version = "*", path = "../den-transpiler-swc", optional = true }
den-utils = { version = "*", path = "../den-utils" }

[dev-dependencies]
color-eyre = "0.6.3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = ["stdlib", "typescript", "react", "wasm-wasmtime"]
typescript = [
    "transpile",
    "den-transpiler-swc?/typescript",
]
react = ["transpile", "den-transpiler-swc?/react"]
transpile = [
    "dep:den-transpiler-swc",
    "den-transpiler-swc?/transpile",
]

stdlib = [
    "stdlib-console",
    "stdlib-core",
    "stdlib-crypto",
    "stdlib-fs",
    "stdlib-networking",
    "stdlib-sqlite",
    "stdlib-text",
    "stdlib-timer",
    "stdlib-whatwg-fetch",
]
stdlib-console = ["dep:den-stdlib-console"]
stdlib-core = ["dep:den-stdlib-core"]
stdlib-crypto = ["dep:den-stdlib-crypto"]
stdlib-fs = ["dep:den-stdlib-fs"]
stdlib-networking = ["dep:den-stdlib-networking"]
stdlib-sqlite = ["dep:den-stdlib-sqlite"]
stdlib-text = ["dep:den-stdlib-text"]
stdlib-timer = ["dep:den-stdlib-timer"]
stdlib-whatwg-fetch = ["dep:den-stdlib-whatwg-fetch"]

wasm = ["dep:den-stdlib-wasm"]
wasm-wasmtime = ["wasm", "den-stdlib-wasm?/wasmtime"]
wasm-wasmi = ["wasm", "den-stdlib-wasm?/wasmi"]
