[package]
name = "den-stdlib-console"
description = "Console API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true


[dependencies]
colored = "2.0.4"
rquickjs = { workspace = true, features = ["macro"] }
