[package]
name = "den-stdlib-core"
description = "Core API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
delegate-attr.workspace = true
derivative.workspace = true
derive_more.workspace = true
tokio-util.workspace = true
rquickjs = { workspace = true, features = ["macro"] }
base64-simd = "0.8.0"
quanta = "0.12.3"
