[package]
name = "den-stdlib-core"
description = "Core API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
base64 = { version = "0.22.1", optional = true }
base64-simd = { version = "0.8.0", optional = true }
delegate-attr.workspace = true
derivative.workspace = true
derive_more.workspace = true
rquickjs = { workspace = true, features = ["macro"] }
tokio-util.workspace = true

[features]
default = ["base64"]
base64 = ["dep:base64"]
base64-simd = ["dep:base64-simd"]
