[package]
name = "den-stdlib-fs"
description = "Filesystem API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
rquickjs = { workspace = true, features = ["macro", "futures"] }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
