[package]
name = "den-stdlib-io"
description = "Generic IO for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
delegate-attr.workspace = true
den-stdlib-core = { version = "*", path = "../den-stdlib-core" }
den-utils = { version = "*", path = "../den-utils" }
derivative.workspace = true
derive_more.workspace = true
either.workspace = true
rquickjs = { workspace = true, features = ["macro", "futures"] }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }