[package]
name = "den-stdlib-io"
description = "Generic IO for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
derive_more.workspace = true
either.workspace = true
rquickjs = { workspace = true, features = ["macro", "futures"] }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }