[package]
name = "den-stdlib-networking"
version.workspace = true
edition.workspace = true

[dependencies]
delegate-attr.workspace = true
den-stdlib-core = { version = "^0.0", path = "../den-stdlib-core" }
den-utils = { version = "^0.0", path = "../den-utils" }
derivative.workspace = true
derive_more.workspace = true
either.workspace = true
rquickjs = { workspace = true, features = ["macro", "futures"] }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
