[package]
name = "den-stdlib-networking"
description = "Networking & Socket API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
delegate-attr.workspace = true
den-stdlib-io = { version = "*", path = "../den-stdlib-io" }
derivative.workspace = true
derive_more.workspace = true
either.workspace = true
rquickjs = { workspace = true, features = ["macro", "futures"] }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
