[package]
name = "den-stdlib-regex"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
colored = "2.1.0"
pcre2 = "0.2.9"
rquickjs = { workspace = true, features = ["macro"] }
