[package]
name = "den-stdlib-text"
description = "Text API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
derivative.workspace = true
derive_more.workspace = true
either.workspace = true
encoding_rs = "0.8.34"
indexmap.workspace = true
rquickjs = { workspace = true, features = ["macro"] }
