[package]
name = "den-stdlib-timer"
version.workspace = true
edition.workspace = true

[dependencies]
rquickjs = { workspace = true, features = ["macro", "futures"] }
den-stdlib-core = { version = "*", path = "../den-stdlib-core" }
tokio = { workspace = true, features = ["time"] }
den-utils = { version = "*", path = "../den-utils" }
