[package]
name = "den-stdlib-timer"
description = "Timer API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
rquickjs = { workspace = true, features = ["macro", "futures"] }
den-stdlib-core = { version = "*", path = "../den-stdlib-core" }
tokio = { workspace = true, features = ["time"] }
den-utils = { version = "*", path = "../den-utils" }
