[package]
name = "den-stdlib-wasm"
description = "WebAssembly API for den"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
den-stdlib-core = { version = "*", path = "../den-stdlib-core" }
derivative.workspace = true
derive_more.workspace = true
either.workspace = true
getset = "0.1.3"
indexmap.workspace = true
rquickjs = { workspace = true, features = ["macro", "futures"] }
tracing.workspace = true
typed-builder.workspace = true
wabt = "0.10.0"
wasmi = { version = "0.40.0", optional = true }
wasmtime = { version = "27.0.0", optional = true }
wasmtime-wasi = { version = "27.0.0", optional = true }

[features]
default = ["wasmtime"]
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
wasmi = ["dep:wasmi"]
