[package]
name = "den-transpiler-swc"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.94"
derive_more = { workspace = true, features = ["display", "debug", "error"] }
sourcemap = "9.1.2"
trie-match = "0.2.0"

swc_common = { version = "5.0.0", features = ["sourcemap", "tty-emitter", "concurrent"] }
swc_ecma_ast = "5.0.0"
swc_ecma_codegen = "5.0.0"
swc_ecma_parser = { version = "6.0.0", optional = true }
swc_ecma_transforms_base = { version = "6.0.2", features = ["concurrent"] }
swc_ecma_transforms_react = { version = "6.0.0", features = ["concurrent"], optional = true }
swc_ecma_transforms_typescript = { version = "6.0.0", optional = true }
swc_ecma_visit = "5.0.0"
swc_config = { version = "1.0.0", features = ["sourcemap"] }
swc_compiler_base = "7.0.0"
swc_node_comments = "5.0.0"

[features]
default = ["transpile"]

typescript = [
    "transpile",
    "dep:swc_ecma_parser",
    "swc_ecma_parser/typescript",
    "dep:swc_ecma_transforms_typescript",
]
react = ["transpile", "dep:swc_ecma_transforms_react"]
transpile = []
